syntax				= "proto3";
option optimize_for = CODE_SIZE;

message Cfg_SkillFAM
{

		uint32 id        = 1;
		uint32 dis		 = 2; // 0=near 1=mid 2=far
		uint32 self_hp	 = 3; // 0=low 1=ok 2=lots
		uint32 self_mp	 = 4; // 0=low 1=ok 2=lots
		uint32 target_hp = 5; // 0=low 1=ok 2=lots
		uint32 skill_dis = 6;
		uint32 skill_pow = 7;
		uint32 skill_usetime = 8;
		uint32 skill_cd = 9;
		uint32 skill_mp = 10;
		uint32 oper_type = 11; // 0=AND 1=OR
		uint32 like		 = 12; // 0=unlike 1=like 2=verylike

}